--- a/web_static/dev/style/index.styl
+++ b/web_static/dev/style/index.styl
@@ -155,3 +155,18 @@ body
       pre
         background-color #efefef
         overflow-x scroll
+
+.no_reqs
+  margin 10px
+  padding 10px
+  background-color white
+  text-align center
+  border-radius 10px
+  box-shadow 0px 6px 40px -10px rgba(0,0,0,0.2)
+  h2
+    padding 0px 0px 5px 0px
+    margin 0px
+    font-weight 600
+    color #02cd69
+  p
+    padding-bottom 5px
