made it possible to view raw data
and made some other small inprovements

--- a/web_static/dev/style/index.styl
+++ b/web_static/dev/style/index.styl
@@ -138,6 +138,9 @@ body
           background-color #cdfef0
     .page
       padding 10px
+      height calc(100% - 110px)
+      overflow-y scroll
+      overflow-x hidden
       h3
         padding: 5px 0px
       .tip
@@ -155,6 +158,7 @@ body
       pre
         background-color #efefef
         overflow-x scroll
+        font-size 17px
 
 .no_reqs
   margin 10px
