Added some good realtimeness to the application

--- a/web_static/dev/style/index.styl
+++ b/web_static/dev/style/index.styl
@@ -17,6 +17,7 @@ body
 .intro-screen
   flex-direction column
   width 100%
+  padding-bottom 50px
   h2
     font-weight 400
     padding 50px 10px 40px 10px
